# clr-init

./: Makefile  README.md  bin_files  clr-init.1  install_initrd.sh  meson.build  meson_options.txt
initramfs/etc/: group
initramfs/etc/lvm/: lvm.conf
initramfs/usr/lib/: os-release
initramfs/usr/lib/systemd/system/: default.target  initrd-switch-root.service  kmod-static-nodes.service  lvm2-mount-sysroot.service  systemd-ask-password-console.service  systemd-journal-flush-msft.service  systemd-journal-flush.service  systemd-journald.service  systemd-modules-trigger.service  systemd-remount-fs.service  systemd-udevd.service  systemd-vconsole-setup.service
initramfs/usr/lib/systemd/system/initrd-root-device.target.wants/: lvm2-mount-sysroot.service  remote-veritysetup.target
initramfs/usr/lib/systemd/system/sysinit.target.wants/: systemd-journal-flush-msft.service
initramfs/usr/lib/udev/hwdb.d/: 20-pci-vendor-model.hwdb  69-libmtp.hwdb  90-libinput-model-quirks.hwdb
initramfs/usr/lib/udev/rules.d/: 60-tbtacl.rules  60-tbtxdomain.rules  69-cd-sensors.rules  69-dm-lvm-metad.rules  69-libmtp.rules  71-seat.rules  90-libinput-model-quirks.rules  90-tpm-thinkpad.rules  90-vconsole.rules  99-systemd.rules
initramfs/usr/share/defaults/etc/: group  nsswitch.conf  passwd  shadow
src/: crypting.c  crypting.h  device_handler.c  device_handler.h  error.c  error.h  initrd.c  initrd.h  main.c
